objects/Collection_Kit__c.object
<CustomObject>
    <description>Used by Viacord to inventory kits left at practices</description>
    <label>Collection Kit</label>
    <nameField>
        <label>Collection Kit Lot #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collection Kits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <label>Practice</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Collection Kit Inventory</relationshipLabel>
        <relationshipName>Collection_Kits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Placement_Date__c</fullName>
        <label>Placement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
</CustomObject>